all code - with graphics

--- a/index.html
+++ b/index.html
@@ -4,39 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>js-bigietto-treno-form</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/style.css">
+    <title></title>
 </head>
 <body>
-    <div class="all-code">
-        <header>
-            <h1>CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
-        </header>
-        <main>
-            <div class="box">
-                <div class="box-uno">
-                <div>
-                    <h3 class="tit">Nome e Cognome</h3>
-                    <div><input class="border" type="text"></div>
-                </div>  
-                <div>
-                    <h3 class="tit">km da percorrere</h3>
-                    <div><input class="border" type="text" required></div>
-                </div>
-                <div>
-                    <h3 class="tit">Fascia d'età</h3>
-                    <div>
-                        <select class="border" name="La tua età" id="">
-                            <option value="">Maggiorenne</option>
-                            <option value="">Minorenne</option>
-                            <option value="">Over-65</option>
-                        </select>
-                    </div>
-                </div>  
-              </div>  
-            </div>
-        </main>
-    </div>
-    <script src="./main.js"></script>
+  <div class="all-code">
+  <header>
+         <h1>Prenota il tuo biglietto</h1> 
+         <img src="assets/img/Trenitalia_logo.svg" alt=""> 
+  </header>
+        <div class="tab">
+          <div class="form">
+          <input type="text" name="quant" id="age" placeholder="Età del passegero"onclick="data()"/>
+          <select name="città" id="città" place-holder="Destinazione">
+          <option value="Taranto">Taranto</option>
+          <option value="Bologna">Bologna</option>
+          <option value="Roma">Roma</option>
+          </select>
+          <input class="button" type="button" value="calcola" onclick="Acquisizione()" />
+          <div class="form-prezzo">
+            Il prezzo è:
+          <span id="risultato">&euro;</span>
+          <div class="sconto">
+            E' stato applicato uno sconto:
+            <span id="scontoapplicato">&euro;</span>
+          </div>
+        </div>
+        </div>
+        </div>
+      </div>
+    
+    <script src="assets/script/main.js"></script>
 </body>
 </html>
